# MPVT

./: README.md  settings.gradle
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/src/: log.cpp  log.h  main.cpp  native-lib.cpp
app/src/main/java/is/xyz/mpv/: MPVLib.java
app/src/main/res/layout/: activity_filepicker.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: pref_headers.xml
gradle/wrapper/: gradle-wrapper.properties
